testall.log

###### Testing test-hello_world
./neo.native < tests/test-hello_world.neo > test-hello_world.ll
lli test-hello_world.ll > test-hello_world.out
lli: test-hello_world.ll:11:23: error: expected comma after load's type
  %hello1 = load i32* %hello
                      ^
###### FAILED

###### Testing fail-assign1
./neo.native < tests/fail-assign1.neo 2> fail-assign1.err >> testall.log
diff -b fail-assign1.err tests/fail-assign1.err > fail-assign1.diff
###### SUCCESS
